1999-08-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (x_toplevel_p, x_get_parent_function): New functions.
	(x_get_managed_toplevel_window): Use them.
	(x_set_override_redirect): New function.
	(tkobjc_pixmap_create_from_widget): Use it. Don't use Tk "wm frame"
	command for X11, use x_get_managed_toplevel_window.
	Record last position and parent window in order to reparent
	to current root window and then back, when necessary.

1999-08-01    <mgd@HELEN>

	* internal.m (tkobjc_raster_create): Initialize
	pm and oldpm to NULL.

	* win32dib.[ch] (dib_copy_metadata): New function.

	* internal.m (tkobjc_raster_createPixmap): Use it.

	* win32dib.c (dib_augmentPalette): Check colormap entries
	to see if they are the same -- in that case do nothing.
	(dib_copy): Copy dibInfo and colormap.
	(dib_destroy): Free colormap if set.

1999-08-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_raster_erase): Assume colormap
	is set. 

	* Raster.m ([Raster -setColormap:]): Remove conditional call to
	erase and call to tkobjc_raster_setBackground.
	([Raster -setWidth:Height:]): Remove call to tkobjc_raster_setColormap
	and call tkobjc_raster_createPixmap after [super setWidth:Height:].

	* ZoomRaster.m (USE_GRID): New macro.
	([ZoomRaster -setZoomFactor:]): Add code to support ZoomRaster
	without grid support.  This can work better with the window
	manager.
	([ZoomRaster -setWidth:Height:]): Include call to "wm grid" only
	if USE_GRID is set.

1999-07-31    <mgd@HELEN>

	* win32dib.c (dib_get_color): In 24 bit case, lookup colorValue
	via dib_paletteIndexForObject.
	(dib_augmentPalette): Re-use palette position if client object
	already present.

	* win32dib.[hc] (dib_fill, dib_ellipse, dib_line, dib_rectangle):
	Add client object argument.  Use dib_get_color instead of
	get_color.
	(dib_get_color): Renamed and from private get_color.

	* internal.m: Undef BOOL before avoidance set.
	(tkobjc_raster_fillRectangle): Add raster argument to